fixed horizontal scrolling.

--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,13 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 @tailwind base;
